# Demining_ws

./: README.md
.catkin_tools/profiles/default/: devel_collisions.txt
demining/: CMakeLists.txt  package.xml
demining/launch/: MineSweeper.launch  Two_cameras.launch  demining_rviz.launch  demining_turtlebot.launch
demining/src/: AvoidMine.cpp  BumperTest.cpp  Colli_Obj_wall.cpp  FMineTest.cpp  Input_User.cpp  MineSweeper.cpp  autoDockingTest.cpp  batteryMonitor.cpp  calibration.cpp  coordinatePublisher.cpp  fakeOutOfBattery.cpp  hello_world.cpp  locate_d_area.cpp  mine_detector.cpp
demining/src/files for testing or calibrating/: fakeOutOfBattery.cpp
demining/src/unused files/: Make_GoTo_Work.cpp  MineSweeper.cpp
devel/: _setup_util.py  env.sh  local_setup.bash  local_setup.sh  local_setup.zsh  setup.bash  setup.sh  setup.zsh
devel/.private/catkin_tools_prebuild/: .catkin  .rosinstall  local_setup.sh  setup.sh
devel/.private/catkin_tools_prebuild/lib/pkgconfig/: catkin_tools_prebuild.pc
devel/.private/catkin_tools_prebuild/share/catkin_tools_prebuild/cmake/: catkin_tools_prebuildConfig.cmake
devel/.private/demining/: .catkin  local_setup.sh  setup.sh
devel/.private/demining/lib/demining/: batteryMonitor  calibration  fakeObj  ftest  ftest2  ftestb  hello_world  locate_d_area
devel/.private/demining/lib/pkgconfig/: demining.pc
devel/.private/demining/share/demining/cmake/: deminingConfig.cmake
devel/lib/demining/: batteryMonitor  calibration  fakeObj  ftest  ftest2  ftestb  hello_world  locate_d_area
devel/lib/pkgconfig/: catkin_tools_prebuild.pc  demining.pc
devel/share/catkin_tools_prebuild/cmake/: catkin_tools_prebuildConfig-version.cmake  catkin_tools_prebuildConfig.cmake
devel/share/demining/cmake/: deminingConfig-version.cmake  deminingConfig.cmake
logs/demining/: build.check.002.log.stderr  build.check.015.log.stderr  build.check.066.log.stderr  build.make.000.log.stderr  build.make.003.log.stderr  build.make.007.log.stderr  build.make.010.log.stderr  build.make.012.log.stderr  build.make.014.log.stderr  build.make.015.log.stderr  build.make.042.log.stderr  build.make.043.log.stderr  build.make.044.log.stderr  build.make.046.log.stderr  build.make.047.log.stderr  build.make.049.log.stderr  build.make.051.log.stderr  build.make.052.log.stderr  build.make.054.log.stderr  build.make.055.log.stderr  build.make.056.log.stderr
src/demining/: CMakeLists.txt
src/demining/launch/: param.launch
src/demining/src/: MineSweeper.cpp  autoDockingTest.cpp  batteryMonitor.cpp  fakeObj.cpp  ftest.cpp  ftest2.cpp  ftestb.cpp  hello_world.cpp  slet.cpp
